--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @import url("styles/contato.css");
 @import url("styles/rodape.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
 :root{
     --cor-de-fundo: #EBECEE;
@@ -14,6 +15,8 @@
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --azul:#002F52;
     --font: 'Poppins', sans-serif;
+    ---font2: 'Josefin Sans', sans-serif;
+    --preto: #000000;
 }
 
 *{
@@ -26,4 +29,50 @@ body{
     font-family: var(--font);
     font-size: 16px;
     font-weight: 400;
+}
+
+.container__titulo{
+    display: none;
+}
+.opcoes{
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .container__titulo, .container__titulo--negrito{
+        font-family: var(---font2);
+        font-size: 30px;
+    }
+    .container__titulo{
+        display: block;
+        font-weight: 400;
+    }
+    .container__titulo--negrito{
+        font-weight: 700;
+    }
+    .opcoes{
+        display: flex;
+        list-style-type: none;
+    }
+    .opcoes__item{
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+    .opcoes__link{
+        color: var(--preto);
+        text-decoration: none;
+    }
+    .container__imagem-transparente{
+        display: none;
+    }
+    .cabecalho__menu-hamburguer{
+        display: none;
+    }
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+        width: auto;
+    }
+    .opcoes__botao{
+        display: none;
+    }
 }
