--- a/styles/banner.css
+++ b/styles/banner.css
@@ -47,3 +47,9 @@
         background-position: 6em;
     }
 }
+
+@media screen and (min-width: 1024px){
+    .banner__pesquisa {
+        width: 35%;
+    }
+}
