--- a/styles/card.css
+++ b/styles/card.css
@@ -53,3 +53,10 @@
     color: var(--branco);
     font-weight: 700;
 }
+
+@media screen and (min-width: 1024px){
+    .card{
+        width: 40%;
+        margin: 2em auto;
+    }
+}
