--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -30,5 +30,29 @@
 }
 
 @media screen and (min-width: 1024px) {
-    
+    .carrossel__titulo{
+        font-size: 26px;
+    }
+    .swiper-pagination{
+       margin: 2em 0 3em 0; 
+    }
+    .swiper{
+        width: 60%;
+    }
+    .swiper-button-prev, .swiper-button-next{
+        display: block;
+        top: 60%;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container{
+        display: flex;
+        align-items: center;
+        margin: 0 20vw 3em 20vw;
+    }
+
+    .swiper-pagination{
+        margin: 1em 0;
+    }
 }
