--- a/styles/contato.css
+++ b/styles/contato.css
@@ -37,3 +37,22 @@
     padding-left: 2em;
 }
 
+@media screen and (min-width: 1024px){
+    .contato{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__titulo{
+        font-size: 24px;
+    }
+
+    .contato__descricao{
+        margin: 1em;
+        width: 30%;
+    }
+    .contato__email{
+        width: 30%;
+    }
+}
