--- a/styles/header.css
+++ b/styles/header.css
@@ -56,3 +56,27 @@
 .container__botao{
     display: none;
 }
+
+.container__texto{
+    display: none;
+}
+
+@media screen and (min-width: 1728px){
+    .cabecalho{
+        padding: 2em;
+    }
+
+    .container__link{
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .opcoes{
+        margin-right: auto;
+    }
+    .container__texto{
+        display: block;
+    }
+}
