--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -6,3 +6,28 @@ hr{
     background-color: var(--branco);
     padding: 1em;
 }
+
+.rodape__titulo{
+    font-weight: 400;
+}
+
+.rodape__lista{
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .rodape{
+        display: flex;
+        justify-content: space-around;
+    }
+    .rodape__titulo{
+        font-size: 24px;
+    }
+    .rodape__lista{
+        list-style-type: none;
+        display: block;
+    }
+    .rodape__lista__titulo{
+        margin-bottom: 1em;
+    }
+}
